--- a/Project/appengine/debugging/public/style.css
+++ b/Project/appengine/debugging/public/style.css
@@ -187,9 +187,11 @@ html[dir="RTL"] button.primary {
 .header {
     padding: 0 25px;
     background-color: #00adbc;
-    height: 50px;
+    height: 60px;
     z-index: 10;
 }
+
+
 
 .header .leftSide {
     display: inline-block;
@@ -267,7 +269,7 @@ html[dir="RTL"] button.primary {
     float: right;
     padding:3px;
     height: 50px;
-    width:300px;
+    width:25em;
     cursor: pointer;
     /*display: none;*/
 }
@@ -285,9 +287,9 @@ html[dir="RTL"] button.primary {
 }
 
 
-.header .rightSide#rightBar div{
+/* .header .rightSide#rightBar div{
     display: inline-block;
-}
+} */
 
 .header .rightSide#rightBar .goog-container.goog-container-vertical{
     outline: none;
@@ -1027,7 +1029,7 @@ img.showCodeRobot {
 .acItem{
     height: 40px;
     line-height: 40px;
-    background-color: white;
+    background-color: lightblue;
     border-radius: 5px;
     padding-left: 10px;
     margin-bottom: 10px
