commit to fix part 'participate task'

--- a/Project/appengine/templates/index/index.html
+++ b/Project/appengine/templates/index/index.html
@@ -173,7 +173,7 @@
                                 <select class="form-control" id="inputIdentity">
                                   <option value="none" selected>選擇身份</option>
                                   <option value="student">學生</option>
-                                  <option value="teacher">老師</option>
+                                  <!-- <option value="teacher">老師</option> -->
                                 </select>
                             </div>
                             <div class="form-group group3">
