--- a/Project/appengine/templates/user/student.html
+++ b/Project/appengine/templates/user/student.html
@@ -70,7 +70,7 @@
           
           <div class="infoSec">
             <div id="photo">
-              photo
+              <img src="../../static/index/robot.happy.png" alt="" width="100%">
             </div>
           </div>
           <div class="infoSec" id="infoText">
