finish add course

--- a/Project/appengine/templates/user/student.html
+++ b/Project/appengine/templates/user/student.html
@@ -262,7 +262,7 @@
 
             <div class="sec" style="display:none;">
               <button>
-                <a href="">領取</a>
+                <a href="javascript:void(0);" id="getCourse">領取</a>
               </button>
             </div>
 
