--- a/Project/appengine/static/user/teacher.css
+++ b/Project/appengine/static/user/teacher.css
@@ -17,15 +17,14 @@
     outline: none
 }
 
-#discription{
+/* #discription{
     width: 100%;
     padding: 10px;
-}
+} */
 
 button{
     outline: none;
     border-radius: 3px;
-    width: 50px;
     /* margin:5px; */
     cursor: pointer;
 }
