--- a/Project/appengine/templates/backend/teacher1.html
+++ b/Project/appengine/templates/backend/teacher1.html
@@ -52,7 +52,7 @@
                                     <a class="dropdown-item" href="#">Action</a>
                                     <a class="dropdown-item" href="#">Another action</a>
                                     <div class="dropdown-divider"></div>
-                                    <div class="dropdown-item"><a id="log-out">登出</a></div>
+                                    <div class="dropdown-item" id="log-out" style="cursor: pointer"><a >登出</a></div>
                                     </div>
                                 </li>
                           </ul>
