finish char api2

--- a/Project/appengine/templates/user/student.html
+++ b/Project/appengine/templates/user/student.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css"
     integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
   <link rel="stylesheet" href="../../static/user/task.css">
-  <title>Document</title>
+  <title>DebuGamO</title>
 </head>
 
 <body>
@@ -201,9 +201,9 @@
             </div>
             <div id="customTask" class="tasktype dropdown">
                 <div class="taskTitle active">
-                    <a href="">特殊任務</a>
+                    <a href="javaScript:void(0);">特殊任務</a>
                 </div>
-                <ul id="mainTasklist">
+                <ul id="customTasklist" style="display:none;">
                     <!-- <li><a href="javascript:void(0);">DebuGamO</a></li> -->
                 </ul>
             </div>
