--- a/Project/appengine/templates/backend/teacher1.html
+++ b/Project/appengine/templates/backend/teacher1.html
@@ -30,7 +30,7 @@
 
         <div id="teacher-header">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                        <a class="navbar-brand" href="#">Debugamo</a>
+                        <a class="navbar-brand" href="">Debugamo</a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
@@ -38,19 +38,19 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                           <ul class="navbar-nav mr-auto">
                             <li class="nav-item active">
-                              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                              <a class="nav-link" href="">Home <span class="sr-only">(current)</span></a>
                             </li>
                           </ul>
                           <!-- <a class="nav-link" href="#" data-toggle="modal" data-target="#exampleModal">登入與註冊</a> -->
                           <!-- <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent"> -->
                           <ul class="nav navbar-nav navbar-right">
                                 <li class="nav-item">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     帳戶管理
                                     </a>
                                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Another action</a>
+                                    <a class="dropdown-item" href="">Action</a>
+                                    <a class="dropdown-item" href="">Another action</a>
                                     <div class="dropdown-divider"></div>
                                     <div class="dropdown-item" id="log-out" style="cursor: pointer"><a >登出</a></div>
                                     </div>
@@ -105,9 +105,16 @@
                                 <div class="col-9">
                                     <div class="card" style="margin-top:20px">
                                         <ul class="list-group list-group-flush">
-                                            <li class="list-group-item text-center" id="course-setting">課程設定</li>
-                                            <li class="list-group-item text-center" id="course-statistic">課程數據</li>
+                                            <li class="list-group-item text-center" id="course-setting" style="cursor: pointer">課程設定</li>
+                                            <li class="list-group-item text-center" id="course-statistic" style="cursor: pointer">課程數據</li>
+                                            
                                         </ul>
+                                    </div>
+                                    <div class="card" style="margin-top: 10px">
+                                        <div class="card-header text-center" >
+                                            課程代碼
+                                        </div>
+                                        <div class="card-body text-center" id="course_id_display"></div>
                                     </div>
                                 </div>
                             </div>
