--- a/Project/appengine/templates/backend/teacher1.html
+++ b/Project/appengine/templates/backend/teacher1.html
@@ -30,7 +30,7 @@
 
         <div id="teacher-header">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                        <a class="navbar-brand" href="">Debugamo</a>
+                        <a class="navbar-brand" href="">DebuGamO</a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
@@ -45,15 +45,14 @@
                           <!-- <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent"> -->
                           <ul class="nav navbar-nav navbar-right">
                                 <li class="nav-item">
-                                    <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <!-- <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     帳戶管理
                                     </a>
                                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="">Action</a>
-                                    <a class="dropdown-item" href="">Another action</a>
-                                    <div class="dropdown-divider"></div>
                                     <div class="dropdown-item" id="log-out" style="cursor: pointer"><a >登出</a></div>
-                                    </div>
+                                    </div> -->
+                                    <a class="nav-link" href="" id="log-out" role="button"  aria-haspopup="true" aria-expanded="false">
+                                        登出</a>
                                 </li>
                           </ul>
                           <!-- </div> -->
@@ -114,7 +113,7 @@
                                         <div class="card-header text-center" >
                                             課程代碼
                                         </div>
-                                        <div class="card-body text-center" id="course_id_display"></div>
+                                        <div class="card-body text-center" id="course_id_display" ></div>
                                     </div>
                                 </div>
                             </div>
