--- a/Project/appengine/templates/index/index.html
+++ b/Project/appengine/templates/index/index.html
@@ -18,15 +18,15 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#about">關於 <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/aboutUs">關於 <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">介紹</a>
+                        <a class="nav-link" href="#introTitleText">介紹</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" data-toggle="modal" data-target="#exampleModal">登入與註冊</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         聯絡我們
                         </a>
@@ -34,7 +34,7 @@
                             <a class="dropdown-item" href="#">錯誤回報</a>
                             <a class="dropdown-item" href="#">合作與支持</a>
                         </div>
-                    </li>
+                    </li> -->
                 </ul>
             </div>   
         </nav>
@@ -109,20 +109,8 @@
             </p>
         </div>
     </div>
-    <div id="about" class="section">
-        <h1 class="display-4">關於我們</h1>
-        <div class="introContent content-left" style="font-size:1.3em;line-height:2em;">
-            <p>
-                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspDebuGamO是繼原先台大葉丙成教授PaGamO的核心概念，匯集不同題目而組成關卡，藉由完成任務需求、邏輯思考等方式，吸引學生學習，此外，老師和學生都可以彼此分享解法，也可以藉此訓練學生表達能力，讓學生們從遊戲中體驗學習。
-            </p>
-            <br>
-            <p>
-                目前主要的遊戲是由台大的許佑群所開發，未來將會推出多款遊戲及劇情，同時也歡迎您的加入！
-            </p>
-        </div>
-        <div class="introContent contentRight" style="float:right;">
-            <img src="../../static/index/robot.happy.png" alt="" srcset="" width="60%">
-        </div>
+    <div id="footer" style="width:100%;height:60px;background-color: #00adbc">
+
     </div>
 
     
