--- a/Project/appengine/templates/index/index.html
+++ b/Project/appengine/templates/index/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../../static/index/style.css">
     <link rel="stylesheet" href="../../static/index/bootstrap-4.3.1-dist/css/bootstrap.css">
-    <title>Document</title>
+    <title>DebuGamO</title>
 </head>
 <body>
     <div id="header">
